--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "add": "^2.0.6",
-    "bootstrap": "4.0.0",
+    "bootstrap": "^4.5.0",
+    "bootstrap-social": "5.1.1",
+    "font-awesome": "4.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-popper": "0.9.2",
+    "react-popper": "^2.2.3",
+    "react-router-dom": "4.2.2",
     "react-scripts": "3.4.1",
-    "reactstrap": "5.0.0",
+    "reactstrap": "^8.5.1",
     "yarn": "^1.22.4"
   },
   "scripts": {
